fix: subtle issue with image overflow

--- a/src/views/product-landing/components/hero-heading-visual/hero-heading-visual.module.css
+++ b/src/views/product-landing/components/hero-heading-visual/hero-heading-visual.module.css
@@ -11,6 +11,7 @@
   border-radius: 6px;
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 
 .heading {
